<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/message_history_item_height"
    tools:background="@color/background_image_30p_black">

    <ImageView
        android:id="@+id/unread_indicator"
        android:layout_width="@dimen/unread_icon_size"
        android:layout_height="@dimen/unread_icon_size"
        android:layout_marginEnd="@dimen/unread_icon_marginEnd"
        android:contentDescription="@string/cd_unread"
        android:scaleType="centerCrop"
        android:src="@color/unread_dot_color"
        app:layout_constraintBottom_toBottomOf="@id/icon"
        app:layout_constraintEnd_toStartOf="@id/icon"
        app:layout_constraintTop_toTopOf="@id/icon" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/avatar_icon_size"
        android:layout_height="@dimen/avatar_icon_size"
        android:layout_marginStart="@dimen/message_history_item_padding"
        android:contentDescription="@string/cd_conversation_icon"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/car_red_500a" />

    <ImageView
        android:id="@+id/last_action_icon_view"
        android:layout_width="@dimen/subtitle_icon_width"
        android:layout_height="0dp"
        android:contentDescription="@string/cd_icon_indicating_the_last_action"
        android:scaleType="centerInside"
        android:src="@drawable/car_ui_icon_reply"
        app:layout_constraintBottom_toBottomOf="@id/time_text"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintTop_toTopOf="@id/time_text" />

    <ImageView
        android:id="@+id/reply_action_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/cd_reply_action_button"
        android:scaleType="center"
        android:src="@drawable/car_ui_icon_reply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/mute_action_button"
        app:layout_constraintStart_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mute_action_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/cd_mute_button"
        android:scaleType="center"
        android:src="@drawable/car_ui_icon_toggle_mute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/reply_action_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/message_history_text_margin_end"
        android:singleLine="true"
        android:theme="@style/Theme.Messaging.BidiText"
        app:layout_constraintBottom_toTopOf="@+id/text"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/message_history_icons_margin"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@id/last_action_icon_view"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="14:02 PM" />

    <TextView
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/message_history_icons_margin"
        android:singleLine="true"
        android:text="@string/dot"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/text"
        app:layout_constraintStart_toEndOf="@id/time_text"
        app:layout_constraintTop_toTopOf="@id/text"
        tools:visibility="visible" />

    <TextView
        android:id="@id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/message_history_text_margin_end"
        android:layout_marginStart="@dimen/message_history_icons_margin"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/dot"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="Replied" />

    <View
        android:id="@+id/play_action_touch_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="@dimen/vertical_divider_width"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/vertical_divider_inset"
        android:layout_marginTop="@dimen/vertical_divider_inset"
        android:background="@color/divider_color"
        app:layout_constraintStart_toStartOf="@id/guideline_end" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/message_history_guideline_begin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="200dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
